--- a/src/pages/MerchandiseTable.page
+++ b/src/pages/MerchandiseTable.page
@@ -19,7 +19,7 @@
                     <apex:commandLink value="Del"
                     				  action="{!deleteSelectedMerch}"
                     				  reRender="all"
-                    				  onclick="if(!confirm('Are you sure you want to delete this item?')){return};">
+                    				  onclick="if(!confirm('Are you sure you want to delete \'{!merch.Name}\'?')){return};">
                     	<apex:param name="merchId" value="{!merch.Id}"/>
                     </apex:commandLink>
                 </apex:column>
@@ -38,62 +38,67 @@
             <apex:pageBlockButtons location="bottom">
             	<apex:commandButton action="{!createMerchandise}"
 	            					value="New"
+	            					rendered="{!NOT(showNewMerchPanel)}"
+	            					rerender="newMerchContainer, merchandiseTable"
 	            					style="margin-right: 10px;"/>
 
 	            <apex:commandButton action="{!save}"
-	            					value="Save"/>
+	            					value="Save"
+	            					rendered="{!NOT(showNewMerchPanel)}"/>
             </apex:pageBlockButtons>
     
         </apex:pageBlock>
     
         <div style="height: 30px;"/>
 
-        <apex:pageBlock id="newMerch" rendered="{!showNewMerchPanel}" title="Create New Merchandise">
+        <apex:outputPanel id="newMerchContainer">
+	        <apex:pageBlock id="newMerch" rendered="{!showNewMerchPanel}" title="Create New Merchandise">
 
-        	<apex:pageMessages/>
+	        	<apex:pageMessages/>
 
-            <apex:pageBlockSection>
-            	<apex:pageBlockSectionItem>
-            		<apex:outputLabel value="Name"/>
-					<apex:outputPanel>
-				        <div class="requiredInput">
-				        	<div class="requiredBlock"></div>
-		                	<apex:inputText value="{!merchToCreate.Name}" required="true"/>
-		                </div>
-	                </apex:outputPanel>
-                </apex:pageBlockSectionItem>
+	            <apex:pageBlockSection>
+	            	<apex:pageBlockSectionItem>
+	            		<apex:outputLabel value="Name"/>
+						<apex:outputPanel>
+					        <div class="requiredInput">
+					        	<div class="requiredBlock"></div>
+			                	<apex:inputText value="{!merchToCreate.Name}" required="true"/>
+			                </div>
+		                </apex:outputPanel>
+	                </apex:pageBlockSectionItem>
 
-                <br/>
+	                <br/>
 
-                <apex:pageBlockSectionItem>
-            		<apex:outputLabel value="Price"/>
-					<apex:outputPanel>
-				        <div class="requiredInput">
-				        	<div class="requiredBlock"></div>
-		                	<apex:inputText value="{!merchToCreate.Price__c}" required="true"/>
-		                </div>
-	                </apex:outputPanel>
-                </apex:pageBlockSectionItem>
+	                <apex:pageBlockSectionItem>
+	            		<apex:outputLabel value="Price"/>
+						<apex:outputPanel>
+					        <div class="requiredInput">
+					        	<div class="requiredBlock"></div>
+			                	<apex:inputText value="{!merchToCreate.Price__c}" required="true"/>
+			                </div>
+		                </apex:outputPanel>
+	                </apex:pageBlockSectionItem>
 
-                <br/>
+	                <br/>
 
-                <apex:pageBlockSectionItem>
-            		<apex:outputLabel value="Quantity"/>
-					<apex:outputPanel>
-				        <div class="requiredInput">
-				        	<div class="requiredBlock"></div>
-		                	<apex:inputText value="{!merchToCreate.Quantity__c}" required="true"/>
-		                </div>
-	                </apex:outputPanel>
-                </apex:pageBlockSectionItem>
-            </apex:pageBlockSection>
+	                <apex:pageBlockSectionItem>
+	            		<apex:outputLabel value="Quantity"/>
+						<apex:outputPanel>
+					        <div class="requiredInput">
+					        	<div class="requiredBlock"></div>
+			                	<apex:inputText value="{!merchToCreate.Quantity__c}" required="true"/>
+			                </div>
+		                </apex:outputPanel>
+	                </apex:pageBlockSectionItem>
+	            </apex:pageBlockSection>
 
-            <apex:pageBlockButtons location="bottom">
-            	<apex:commandButton action="{!saveNewMerchandise}" value="Create Merchandise"/>
-            	<apex:commandButton action="{!cancelNewMerchandise}" value="Cancel" immediate="true" html-formnovalidate="formnovalidate"/>
-            </apex:pageBlockButtons>
+	            <apex:pageBlockButtons location="bottom">
+	            	<apex:commandButton action="{!saveNewMerchandise}" value="Create Merchandise" rerender="newMerchContainer, merchandiseTable"/>
+	            	<apex:commandButton action="{!cancelNewMerchandise}" value="Cancel" rerender="newMerchContainer, merchandiseTable" immediate="true" html-formnovalidate="formnovalidate"/>
+	            </apex:pageBlockButtons>
 
-        </apex:pageBlock>
+	        </apex:pageBlock>
+        </apex:outputPanel>
 
     </apex:form>
 
